--- a/CuriculumVitae/GanDevWeb/index.html
+++ b/CuriculumVitae/GanDevWeb/index.html
@@ -504,7 +504,7 @@
 							</a> 
 						</div>
 						<div class="col">
-							<h6>Projet à venir</h6>
+							<h6>Projet<br> à venir</h6>
 							<a href="">
 								<img
 									class="logo"
@@ -514,7 +514,7 @@
 							</a> 
 						</div>
 						<div class="col">
-							<h6>Projet à venir</h6>
+							<h6>Projet<br> à venir</h6>
 							<a href="">
 								<img
 									class="logo"
@@ -524,7 +524,7 @@
 							</a> 
 						</div>
 						<div class="col">
-							<h6>Projet à venir</h6>
+							<h6>Projet<br> à venir</h6>
 							<a href="">
 								<img
 									class="logo"
@@ -534,7 +534,7 @@
 							</a> 
 						</div>
 						<div class="col">
-							<h6>Projet à venir</h6>
+							<h6>Projet<br> à venir</h6>
 							<a href="">
 								<img
 									class="logo"
