--- a/CuriculumVitae/GanDevWeb/index.html
+++ b/CuriculumVitae/GanDevWeb/index.html
@@ -265,7 +265,7 @@
 							<div class="col exp-title" id="exp-title-ecole42">
 								<h4>Étudiant Développeur applicatif</h4>
 								<h3>École 42 - Paris</h3>
-								<a href="#ecole42" onclick="show_hide_exp('ecole42','exp-title-ecole42', 'm-info1'); return false"><i class="fas fa-hand-point-right"></i><span id="m-info1"> More Info </span><i class="fas fa-hand-point-right"></i></a>
+								<a href="#ecole42" onclick="show_hide_exp('ecole42','exp-title-ecole42', 'm-info1'); return false"><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h "></i><span id="m-info1"> More Info </span><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i></a>
 							</div>
 							<div class="col exp-detail" id="ecole42" style="display: none">
 								<p style="color: var(--gray-darkslategray);">Projet	WEB (HTML, PHP, CSS, JS..): STARSHIP WAR, CAMAGRU, KPOP</p>
@@ -286,7 +286,7 @@
 							<div class="col exp-title" id="exp-title-malis">
 								<h4>Serveur Polyvalent</h4>
 								<h3>Malis Restaurant - Paris</h3>
-								<a href="#malis" onclick="show_hide_exp('malis','exp-title-malis', 'm-info2'); return false"><i class="fas fa-hand-point-right"></i><span id="m-info2"> More Info </span><i class="fas fa-hand-point-right"></i></a>
+								<a href="#malis" onclick="show_hide_exp('malis','exp-title-malis', 'm-info2'); return false"><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i><span id="m-info2"> More Info </span><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i></a>
 							</div>
 							<div class="col exp-detail" id="malis" style="display: none">
 								<p>- Accueil, conseil, relation avec la clientèle
@@ -303,7 +303,7 @@
 							<div class="col exp-title" id="exp-title-cafe">
 								<h4>Gérant, Responsable Caisse et Vente FDJ, Serveur</h4>
 								<h3>Café Des Lilas - Choisy Le Roi</h3>
-								<a href="#cafe" onclick="show_hide_exp('cafe','exp-title-cafe', 'm-info3'); return false"><i class="fas fa-hand-point-right"></i><span id="m-info3"> More Info </span><i class="fas fa-hand-point-right"></i></a>
+								<a href="#cafe" onclick="show_hide_exp('cafe','exp-title-cafe', 'm-info3'); return false"><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i><span id="m-info3"> More Info </span><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i></a>
 							</div>
 							<div class="col exp-detail" id="cafe" style="display: none">
 								<p>- Accueil, conseil, relation avec la clientèle
@@ -320,7 +320,7 @@
 							<div class="col exp-title" id="exp-title-tang">
 								<h4>Technicien Polyvalent</h4>
 								<h3>Tang Express - Paris</h3>
-								<a href="#tang" onclick="show_hide_exp('tang','exp-title-tang', 'm-info4'); return false"><i class="fas fa-hand-point-right"></i><span id="m-info4"> More Info </span><i class="fas fa-hand-point-right"></i></a>
+								<a href="#tang" onclick="show_hide_exp('tang','exp-title-tang', 'm-info4'); return false"><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i><span id="m-info4"> More Info </span><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i></a>
 							</div>
 							<div class="col exp-detail" id="tang" style="display: none">
 								<p>- Installation câblage et configuration pour réseau informatique
@@ -337,7 +337,7 @@
 							<div class="col exp-title" id="exp-title-cyber">
 								<h4>Technicien Informatique (gérant)</h4>
 								<h3>Cybernight - La Rochelle</h3>
-								<a href="#cyber" onclick="show_hide_exp('cyber','exp-title-cyber', 'm-info5'); return false"><i class="fas fa-hand-point-right"></i><span id="m-info5"> More Info </span><i class="fas fa-hand-point-right"></i></a>
+								<a href="#cyber" onclick="show_hide_exp('cyber','exp-title-cyber', 'm-info5'); return false"><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i><span id="m-info5"> More Info </span><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i></a>
 							</div>
 							<div class="col exp-detail" id="cyber" style="display: none">
 								<p>- Maintenance, installation, configuration et gestion d'un parc
@@ -354,7 +354,7 @@
 							<div class="col exp-title" id="exp-title-allsystem">
 								<h4>Technicien Informatique</h4>
 								<h3>Allsystem - Paris</h3>
-								<a href="#allsystem" onclick="show_hide_exp('allsystem','exp-title-allsystem', 'm-info6'); return false"><i class="fas fa-hand-point-right"></i><span id="m-info6"> More Info </span><i class="fas fa-hand-point-right"></i></a>
+								<a href="#allsystem" onclick="show_hide_exp('allsystem','exp-title-allsystem', 'm-info6'); return false"><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i><span id="m-info6"> More Info </span><i class="fas fa-hand-point-right trans-speed-1 rot-p-360-h"></i></a>
 							</div>
 							<div class="col exp-detail" id="allsystem" style="display: none">
 								<p>- Installation, maintenance et gestion d’une salle réseau
