--- a/CuriculumVitae/GanDevWebV2.0/index.html
+++ b/CuriculumVitae/GanDevWebV2.0/index.html
@@ -29,10 +29,10 @@
 
     <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<FONTS FAMILY>>>>>>>>>>>>>>>>>>>>>>>>>> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC" /> -->
-    <!-- <link rel="stylesheet" href="http://fr.allfont.net/allfont.css?fonts=crete-round" /> -->
+    <link rel="stylesheet" href="http://fr.allfont.net/allfont.css?fonts=crete-round" />
     <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Limelight' /> -->
     <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lobster' /> -->
-    <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato' /> -->
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato' />
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" /> -->
 
