--- a/CuriculumVitae/GanDevWebV2/index.html
+++ b/CuriculumVitae/GanDevWebV2/index.html
@@ -8,7 +8,7 @@
     <!-- <<<<<<<<<<<<<CHAR/AUTHOR/DESCRIPTION/TITLE/VIEWPORT>>>>>>>>>>>>> -->
     <meta charset="UTF-8" />
     <meta name="author" content="jeagan" />
-    <meta name="description" content="Curiculum Vitae GAN Dev Web" />
+    <meta name="description" content="Curriculum Vitae GAN Dev Web" />
     <title>GanDevWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
