--- a/CuriculumVitae/GanDevWebV2/index.html
+++ b/CuriculumVitae/GanDevWebV2/index.html
@@ -29,7 +29,8 @@
 
     <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<FONTS FAMILY>>>>>>>>>>>>>>>>>>>>>>>>>> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC" /> -->
-    <link rel="stylesheet" href="http://fr.allfont.net/allfont.css?fonts=crete-round" />
+    <!-- <link rel="stylesheet" href="http://fr.allfont.net/allfont.css?fonts=crete-round" /> DONT WORK CHECK ?-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap">
     <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Limelight' /> -->
     <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lobster' /> -->
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato' />
